namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: php-andreka
  labels:
    name: php-test
