deployment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php-app
  namespace: php-andreka
spec:
  selector:
    matchLabels:
      app: php-app
  template:
    metadata:
      labels:
        app: php-app
    spec:
      containers:
      - name: php-app
        image: andrekaparwasana1985/custom-nginx:1.0
        resources:
          limits:
            memory: "128Mi"
            cpu: "250m"
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: php-app-service
  namespace: php-andreka
spec:
  type: NodePort
  selector:
    app: php-app
  ports:
  - port: 8081
    targetPort: 80
    nodePort: 31000
