ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: andreka-ingress
  namespace: php-andreka
spec:
  ingressClassName: nginx
  rules:
  - host: andreka.local
    http:
      paths:
      - path: /php-andreka/
        pathType: Prefix
        backend:
          service:
            name: php-app-service
            port:
              number: 8080
      - path: /todo-app
        pathType: Prefix
        backend:
          service:
            name: todo-app-service
            port:
              number: 8080
